--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,3 +1,4 @@
-<div id="app">
-  <h1>Hello World</h1>
-</div>
+<p>
+  Modify me in `app/views/homes/index.html.erb` or change the root directive in
+  `config/routes.rb`
+</p>
