--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,3 +1,3 @@
-<div id="app" data-current-user-id= "<%= @current_user_id %>" >
+<div id="app" data-current-user-id= "<%= current_user_id %>" >
 </div>
 <%= javascript_pack_tag 'application' %>
