Fixed styling and tests

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,3 +31,9 @@ span {
   flex-direction: row;
   justify-content: center;
 }
+ span {
+   align-items: center;
+ }
+ .fa-5x {
+   padding: 5px;
+ }
