--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,18 +22,82 @@
 }
 
 body {
-  background-color: #aaaaaa
+  background-color: #222222;
+  font-family: 'Gafata', sans-serif;
 }
-
+h1 {
+  font-family: 'Cinzel Decorative', cursive;
+  color: #eeeeee;
+  text-align: center;
+}
+h2 {
+  font-family: 'Gafata', sans-serif;
+  text-align: center;
+}
+h3 {
+  font-family: 'Gafata', sans-serif;
+  text-align: center;
+}
 
 span {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
 }
- span {
-   align-items: center;
- }
- .fa-5x {
-   padding: 5px;
- }
+
+.fa-5x {
+ padding: 5px;
+ color: #E65400;
+}
+
+a {
+  color: #000000;
+  font-weight: 600;
+}
+
+.button {
+  border: 2px outset darkgrey;
+  background-color: #E65400;
+}
+button {
+  border: 2px outset darkgrey;
+  background-color: #E65400;
+}
+
+.minus-three {
+  background-color: #B72C22;
+}
+.minus-two {
+  background-color: #E73224;
+}
+.minus-one {
+  background-color: #FF5244;
+}
+.plus-one {
+  background-color: #4EF66B;
+}
+.plus-two {
+  background-color: #28BE42;
+}
+.plus-three {
+  background-color: #198C2D;
+}
+
+.faction-name {
+  font-size: 1.75em;
+  border: 1px outset grey;
+  text-align: center;
+}
+
+.faction-name:hover{
+  border: 1px inset black;
+}
+
+.faction-status {
+  font-size: 1.5em;
+}
+
+.centered {
+  margin: 0 auto;
+}
