--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Sign up</h1>
 
-<div class="row panel">
-  <div class="small-10 large-8 small-centered large-centered columns">
+<div class="row">
+  <div class="small-10 small-centered columns panel">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
 
